--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>ElectionBot</title>
+    <title>ElectionBot | {{page/name}}</title>
     <link rel="icon" href="data:;base64,=" />
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
+
 <body>
-    Chatbot running.
+    {{{body}}}
 </body>
+
 </html>
