--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ElectionBot | {{page/name}}</title>
+    <title>ElectionBot | {{page/title}}</title>
     <link rel="icon" href="data:;base64,=" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/static/css/styles.css" />
 </head>
 
 <body>
