--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>ElectionBot | {{page/title}}</title>
     <link rel="icon" href="data:;base64,=" />
-    <link rel="stylesheet" href="/static/css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
 <body>
