--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>ElectionBot | {{page/title}}</title>
-    <link rel="icon" href="data:;base64,=" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 
