--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,7 @@
 }
 body {
     margin: 0;
-    padding: 20px;
+    padding: 20px 30px;
     background-color: rgb(240, 225, 210);
 }
 h1 {
@@ -26,7 +26,11 @@ form {
 form * {
     font-size: 0.9rem;
 }
-form input {
+form label {
+    font-weight: bold;
+}
+form input,
+form textarea {
     display: block;
     width: 100%;
     margin-bottom: 1em;
@@ -34,8 +38,8 @@ form input {
     border-radius: 5px;
     border: 1px solid #999;
 }
-form label {
-    font-weight: bold;
+form textarea {
+    min-height: 130px;
 }
 form button {
     padding: 8px 20px;
