--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,36 @@
 <h1>{{{heading}}}</h1>
-{{{data/content}}}
+
+<div>
+    <a href="{{data/ELECTION.electionUrl}}">election</a> | <a href="{{data/chatRoomUrl}}">chatroom</a>
+</div>
+
+<div>
+    <table>
+        <tr><td>Last Updated</td><td>{{data/ELECTION.updated}}</td></tr>
+        <tr><td>Election URL</td><td>{{data/ELECTION.electionUrl}}</td></tr>
+        <tr><td>Election Title</td><td>{{data/ELECTION.title}}</td></tr>
+        <tr><td>Election #</td><td>{{data/ELECTION.electionNum}}</td></tr>
+        <tr><td>Active?</td><td>{{data/ELECTION.isActive()}}</td></tr>
+        <tr><td>Cancelled?</td><td>{{data/ELECTION.cancelledText}}</td></tr>
+        <tr><td>Site Name</td><td>{{data/ELECTION.sitename}}</td></tr>
+        <tr><td>Host Name</td><td>{{data/ELECTION.siteHostname}}</td></tr>
+        <tr><td>Chat URL</td><td>{{data/ELECTION.chatUrl}}</td></tr>
+        <tr><td>Current Phase</td><td>{{data/ELECTION.phase}}</td></tr>
+        <tr><td>Nomination Start Date</td><td>{{data/ELECTION.dateNomination}}</td></tr>
+        <tr><td>Primary Start Date</td><td>{{data/ELECTION.datePrimary}}</td></tr>
+        <tr><td>Election Start Date</td><td>{{data/ELECTION.dateElection}}</td></tr>
+        <tr><td>Election End Date</td><td>{{data/ELECTION.dateEnded}}</td></tr>
+        <tr><td>Positions</td><td>{{data/ELECTION.numPositions}}</td></tr>
+        <tr><td>Rep. Vote</td><td>{{data/ELECTION.repVote}}</td></tr>
+        <tr><td>Rep. Nominate</td><td>{{data/ELECTION.repNominate}}</td></tr>
+        <tr><td>Nominees</td><td>{{JSON.stringify(data/ELECTION.arrNominees)}}</td></tr>
+        <tr><td>Winners</td><td>{{JSON.stringify(data/ELECTION.arrWinners)}}</td></tr>
+        <tr><td>Voter Stats</td><td>{{data/ELECTION.statVoters}}</td></tr>
+    </table>
+</div>
+
+<footer>
+    <p>I am <strong><a href="https://github.com/samliew/se-electionbot">ElectionBot</a></strong>, a chatbot to handle queries for commonly-asked questions in an election chat room.</p>
+    <p>I also greet users with the election status after certain levels of room inactivity.</p>
+    <p>Please direct any queries &amp; feedback to <a href="https://github.com/samliew/se-electionbot/graphs/contributors">my developers</a> in the <a href="https://chat.stackoverflow.com/rooms/190503/electionbot-development">development chatroom</a> or <a href="https://github.com/samliew/se-electionbot/issues">create an issue on Github</a>.</p>
+</footer>
