--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,16 +10,16 @@
         <tr><td>Election URL</td><td>{{data/ELECTION.electionUrl}}</td></tr>
         <tr><td>Election Title</td><td>{{data/ELECTION.title}}</td></tr>
         <tr><td>Election #</td><td>{{data/ELECTION.electionNum}}</td></tr>
-        <tr><td>Active?</td><td>{{data/ELECTION.isActive()}}</td></tr>
-        <tr><td>Cancelled?</td><td>{{data/ELECTION.cancelledText}}</td></tr>
+        <tr><td>Active?</td><td>{{data/ELECTION.isActive() ? "yes" : "no"}}</td></tr>
+        <tr><td>Cancelled?</td><td>{{data/ELECTION.phase === "cancelled" ? "yes" : "no"}}</td></tr>
         <tr><td>Site Name</td><td>{{data/ELECTION.sitename}}</td></tr>
         <tr><td>Host Name</td><td>{{data/ELECTION.siteHostname}}</td></tr>
         <tr><td>Chat URL</td><td>{{data/ELECTION.chatUrl}}</td></tr>
         <tr><td>Current Phase</td><td>{{data/ELECTION.phase}}</td></tr>
-        <tr><td>Nomination Start Date</td><td>{{data/ELECTION.dateNomination}}</td></tr>
-        <tr><td>Primary Start Date</td><td>{{data/ELECTION.datePrimary}}</td></tr>
-        <tr><td>Election Start Date</td><td>{{data/ELECTION.dateElection}}</td></tr>
-        <tr><td>Election End Date</td><td>{{data/ELECTION.dateEnded}}</td></tr>
+        <tr><td>Nomination Start Date</td><td>{{new Date(data/ELECTION.dateNomination).toISOString()}}</td></tr>
+        <tr><td>Primary Start Date</td><td>{{new Date(data/ELECTION.datePrimary).toISOString()}}</td></tr>
+        <tr><td>Election Start Date</td><td>{{new Date(data/ELECTION.dateElection).toISOString()}}</td></tr>
+        <tr><td>Election End Date</td><td>{{new Date(data/ELECTION.dateEnded).toISOString()}}</td></tr>
         <tr><td>Positions</td><td>{{data/ELECTION.numPositions}}</td></tr>
         <tr><td>Rep. Vote</td><td>{{data/ELECTION.repVote}}</td></tr>
         <tr><td>Rep. Nominate</td><td>{{data/ELECTION.repNominate}}</td></tr>
