--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,23 +1,23 @@
 * {
     font-family: Arial, sans-serif;
-    font-size: 1rem;
     line-height: 1.3;
     color: #000;
 }
 body {
     margin: 0;
     padding: 20px 30px;
+    font-size: 1em;
     background-color: rgb(240, 225, 210);
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 1.2em 0 0.5em;
 }
 h1 {
-    font-size: 1.5rem;
+    font-size: 1.5em;
     color: #000;
 }
 h2 {
-    font-size: 1.3rem;
+    font-size: 1.3em;
     color: #333;
 }
 a {
@@ -50,10 +50,11 @@ pre {
     overflow: auto;
     font-size: 0.8em;
 }
-td:empty,
-pre:empty {
+td:empty:before,
+pre:empty:before {
     content: "(none)";
     font-style: italic;
+    color: #888;
 }
 form {
     max-width: 800px;
@@ -105,27 +106,29 @@ form button {
     font-style: italic;
 }
 
-@media screen and (max-width: 600px) {
+@media (max-width: 767px) {
     table {
         max-width: none;
         width: 100%;
+        font-size: 0.9em;
     }
     tr {
         display: flex;
         align-content: stretch;
         align-items: stretch;
         flex-direction: column;
-        margin: 20px 0;
+        margin: 15px 0;
     }
     th, td {
         border: none;
-        padding: 5px 20px;
+        padding: 2px 20px;
     }
     th:first-child,
     td:first-child {
         font-weight: bold;
     }
     pre {
+        max-width: none;
         white-space: pre-wrap;
         word-break: break-word;
     }
