--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,30 +1,39 @@
+:root {
+    --heading-colour: #000;
+    --text-colour: #000;
+    --link-colour: rgb(0, 0, 139);
+    --border-color: #999;
+}
 * {
     font-family: Arial, sans-serif;
     line-height: 1.3;
-    color: #000;
+    color: var(--text-colour);
 }
 body {
     margin: 0;
-    padding: 20px 30px;
+    padding: 30px;
     font-size: 1em;
-    background-color: rgb(240, 225, 210);
+    background-color: rgb(242, 232, 222);
 }
 h1, h2, h3, h4, h5, h6 {
-    margin: 1.2em 0 0.5em;
+    margin: 2em 0 0.5em;
 }
 h1 {
-    font-size: 1.5em;
-    color: #000;
+    font-size: 1.4em;
+    color: var(--heading-colour);
+}
+h1:first-child {
+    margin-top: 10px;
 }
 h2 {
-    font-size: 1.3em;
-    color: #333;
+    font-size: 1.2em;
+    color: var(--heading-colour);
 }
 a {
-    color: rgb(0, 0, 139);
+    color: var(--link-colour);
 }
 a:visited {
-    color: rgb(0, 0, 0);
+    color: var(--text-colour);
 }
 blockquote {
     margin: 2em 0;
@@ -38,7 +47,7 @@ h2 + table {
 }
 table, th, td {
     padding: 8px 10px;
-    border: 1px solid #888;
+    border: 1px solid var(--border-color);
     border-collapse: collapse;
 }
 th, td {
@@ -54,7 +63,7 @@ td:empty:before,
 pre:empty:before {
     content: "(none)";
     font-style: italic;
-    color: #888;
+    color: var(--border-color);
 }
 form {
     max-width: 800px;
@@ -72,7 +81,7 @@ form textarea {
     margin-bottom: 1em;
     padding: 8px 12px;
     border-radius: 5px;
-    border: 1px solid #999;
+    border: 1px solid var(--border-color);
 }
 form textarea {
     min-height: 130px;
@@ -93,13 +102,12 @@ form button {
     color: indianred;
     background-color: rgb(255, 238, 238);
 }
-.truthy, .falsy {
-    font-weight: bold;
-}
 .truthy {
+    font-weight: bold;
     color: green;
 }
 .falsy {
+    font-weight: bold;
     color: indianred;
 }
 .relativetime {
@@ -107,6 +115,12 @@ form button {
 }
 
 @media (max-width: 767px) {
+    body {
+        padding: 20px 20px;
+    }
+    blockquote {
+        margin: 1.5em 0;
+    }
     table {
         max-width: none;
         width: 100%;
@@ -121,7 +135,7 @@ form button {
     }
     th, td {
         border: none;
-        padding: 2px 20px;
+        padding: 2px 15px;
     }
     th:first-child,
     td:first-child {
