--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,6 +2,7 @@
 
 <blockquote>
     <p>I am <strong><a href="https://github.com/samliew/se-electionbot">ElectionBot</a></strong>, a chatbot to handle queries for commonly-asked questions in an election chat room.</p>
+    <p>I am currently in room {{{url chatRoomUrl chatRoomUrl}}}.</p>
     <p>Please direct any queries &amp; feedback to <a href="https://github.com/samliew/se-electionbot/graphs/contributors">my developers</a> in the <a href="https://chat.stackoverflow.com/rooms/190503/electionbot-development">development chatroom</a> or <a href="https://github.com/samliew/se-electionbot/issues">create an issue on Github</a>.</p>
 </blockquote>
 
@@ -14,7 +15,7 @@
         <tr><td>Host Name</td><td>{{siteHostname}}</td></tr>
         <tr><td>Election Title</td><td>{{{url electionUrl title}}}</td></tr>
         <tr><td>Election #</td><td>{{electionNum}}</td></tr>
-        <tr><td>Chat URL</td><td>{{{url chatUrl chatUrl}}}</td></tr>
+        <tr><td>Chatroom URL</td><td>{{{url chatUrl chatUrl}}}</td></tr>
         <tr><td>Positions</td><td>{{numPositions}}</td></tr>
         <tr><td>Rep. Vote</td><td>{{repVote}}</td></tr>
         <tr><td>Rep. Nominate</td><td>{{repNominate}}</td></tr>
