Rename idle config variables

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -59,10 +59,10 @@
         <tr><td>lastMessageContent</td><td>{{lastMessageContent}}</td></tr>
         <tr><td>activityCount</td><td>{{activityCount}}</td></tr>
         <tr><td>minActivityCountThreshold</td><td>{{minActivityCountThreshold}}</td></tr>
-        <tr><td>roomLongIdleDuration</td><td>{{roomLongIdleDuration}} hours</td></tr>
+        <tr><td>longIdleDuration</td><td>{{longIdleDuration}} hours</td></tr>
         <tr><td>roomReachedMinimumActivityCount</td><td>{{{boolean roomReachedMinimumActivityCount}}}</td></tr>
-        <tr><td>roomBecameIdleAShortWhileAgo</td><td>{{{boolean roomBecameIdleAShortWhileAgo}}}</td></tr>
-        <tr><td>roomBecameIdleAFewHoursAgo</td><td>{{{boolean roomBecameIdleAFewHoursAgo}}}</td></tr>
+        <tr><td>roomBecameIdleAWhileAgo</td><td>{{{boolean roomBecameIdleAWhileAgo}}}</td></tr>
+        <tr><td>roomBecameIdleHoursAgo</td><td>{{{boolean roomBecameIdleHoursAgo}}}</td></tr>
         <tr><td>botHasBeenQuiet</td><td>{{{boolean botHasBeenQuiet}}}</td></tr>
         <tr><td>lastMessageIsPostedByBot</td><td>{{{boolean lastMessageIsPostedByBot}}}</td></tr>
         {{/with}}
