Add election tests, numWinners, hasNewNominees

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,8 +11,9 @@
     <table>
         {{#with data/election}}
         <tr><td>Last updated</td><td>{{utcTimestamp updated}} (<span class="relativetime" title="{{utcTimestamp updated}}"></span>)</td></tr>
-        <tr><td>Site name</td><td>{{sitename}}</td></tr>
+        <tr><td>Site name</td><td>{{{url sitename siteUrl}}}</td></tr>
         <tr><td>Host name</td><td>{{siteHostname}}</td></tr>
+        <tr><td>API slug</td><td>{{apiSlug}}</td></tr>
         <tr><td>Title</td><td>{{{url electionUrl title}}}</td></tr>
         <tr><td>Number</td><td>{{electionNum}}</td></tr>
         <tr><td>Chat room</td><td>{{{url chatUrl chatUrl}}}</td></tr>
@@ -27,8 +28,9 @@
         <tr><td>Opavote URL</td><td>{{{url resultsUrl resultsUrl}}}</td></tr>
         <tr><td>Voter stats</td><td>{{statVoters}}</td></tr>
         {{/with}}
-        <tr><td>Nominees</td><td><pre>{{json data/electionMeta/nominees}}</pre></td></tr>
-        <tr><td>Winners</td><td><pre>{{json data/electionMeta/winners}}</pre></td></tr>
+        <tr><td>Nominees</td><td>{{data/election/numCandidates}}<pre>{{json data/electionMeta/nominees}}</pre></td></tr>
+        <tr><td>Winners</td><td>{{data/election/numWinners}}<pre>{{json data/electionMeta/winners}}</pre></td></tr>
+        <tr><td>Badges</td><td><pre>{{data/electionMeta/electionBadges}}</pre></td></tr>
     </table>
 </div>
 
