Fix getter methods not accessible in hdb

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,9 +11,9 @@
     <table>
         {{#with data/election}}
         <tr><td>Last updated</td><td>{{utcTimestamp updated}} (<span class="relativetime" title="{{utcTimestamp updated}}"></span>)</td></tr>
-        <tr><td>Site name</td><td>{{{url sitename siteUrl}}}</td></tr>
-        <tr><td>Host name</td><td>{{siteHostname}}</td></tr>
-        <tr><td>API slug</td><td>{{apiSlug}}</td></tr>
+        <tr><td>Site name</td><td>{{{url sitename (get this siteUrl)}}}</td></tr>
+        <tr><td>Host name</td><td>{{get this siteHostname}}</td></tr>
+        <tr><td>API slug</td><td>{{get this apiSlug}}</td></tr>
         <tr><td>Title</td><td>{{{url electionUrl title}}}</td></tr>
         <tr><td>Number</td><td>{{electionNum}}</td></tr>
         <tr><td>Chat room</td><td>{{{url chatUrl chatUrl}}}</td></tr>
@@ -25,12 +25,12 @@
         <tr><td>Primary date</td><td>{{utcTimestamp datePrimary}}</td></tr>
         <tr><td>Election date</td><td>{{utcTimestamp dateElection}}</td></tr>
         <tr><td>End date</td><td>{{utcTimestamp dateEnded}}</td></tr>
-        <tr><td>Opavote URL</td><td>{{{url resultsUrl resultsUrl}}}</td></tr>
+        <tr><td>Opavote URL</td><td>{{{url opavoteUrl opavoteUrl}}}</td></tr>
         <tr><td>Voter stats</td><td>{{statVoters}}</td></tr>
         {{/with}}
-        <tr><td>Nominees</td><td>{{data/election/numCandidates}}<pre>{{json data/electionMeta/nominees}}</pre></td></tr>
-        <tr><td>Winners</td><td>{{data/election/numWinners}}<pre>{{json data/electionMeta/winners}}</pre></td></tr>
-        <tr><td>Badges</td><td><pre>{{data/electionMeta/electionBadges}}</pre></td></tr>
+        <tr><td>Candidates</td><td>{{get data/election numNominees}} candidates:<pre>{{json data/electionMeta/nominees}}</pre></td></tr>
+        <tr><td>Winners</td><td>{{get data/election numWinners}} winners:<pre>{{json data/electionMeta/winners}}</pre></td></tr>
+        <tr><td>Badges</td><td><pre>{{{data/electionMeta/electionBadges}}}</pre></td></tr>
     </table>
 </div>
 
